* rs6000.h (SIZE_TYPE): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35177 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-21  David Edelsohn  <edelsohn@gnu.org>
+
+	* rs6000.h (SIZE_TYPE): Define.
+
 2000-07-21  Mark Mitchell  <mark@codesourcery.com>
 
 	* ssa.c (rename_insn_1): Don't rename registers that are
