* Makefile.in (xexit.o): Add dependency for config.h in xexit.c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35180 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-21  Mike Stump  <mrs@wrs.com>
+
+	* Makefile.in (xexit.o): Add dependency for config.h in xexit.c.
+
 2000-07-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* cp-demangle.c (cp_demangle_type): Wrap in IN_LIBGCC2.
