--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,6 +1,7 @@
 2000-07-21  Mike Stump  <mrs@wrs.com>
 
 	* Makefile.in (xexit.o): Add dependency for config.h in xexit.c.
+	* (vasprintf.o): Add dependency for config.h in vasprintf.c.
 
 2000-07-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
