--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-21  Michael Meissner  <meissner@redhat.com>
+
+	* gcc.c-torture/execute/ieee/hugeval.c (main): New test.
+
 2000-07-20  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* g++.old-deja/g++.brendan/crash16.C,
