* system.h (__FUNCTION__): Wrap definition in #ifndef.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35190 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* system.h (__FUNCTION__): Wrap definition in #ifndef.
+
 2000-07-21  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.h (SIZE_TYPE): Define.
