--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-22  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* com.c (ffecom_expr_intrinsic_): case FFEINTRIN_impFGETC_subr,
+	FFEINTRIN_impFPUTC_subr: Check for arg3 being NULL.
+
 2000-07-13  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* lang-specs.h: Use the new named specs.  Remove unnecessary braces.
