--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-22  Jeffrey Oldham  <oldham@codesourcery.com>
+
+	* MAINTAINERS: Add self to Write After Approval list.
+
 2000-07-20  Jason Merrill  <jason@redhat.com>
 
 	* configure.in: Remove all references to libg++ and librx.
