find_reloads_toplev: add new parameter "address_reloaded".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35196 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-22  Aldy Hernandez  <aldyh@redhat.com>
+
+	* reload.c (find_reloads_toplev): Add new parameter
+	"address_reloaded".
+	(find_reloads): Add new parameter to find_reloads_toplev calls.
+
 2000-07-22  Jeffrey Oldham  <oldham@codesourcery.com>
 
 	* collect2.c (main): Typo fixed.
