--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-23  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
+
+	* cp-demangle.c, mkstemps.c: #include <sys/types.h>.
+
 2000-07-21  Mike Stump  <mrs@wrs.com>
 
 	* Makefile.in (xexit.o): Add dependency for config.h in xexit.c.
