--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-23  Kazu Hirata  <kazu@hxi.com>
+
+	* h8300.c: Fix formatting.
+
 2000-07-23  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-lex.c (init_lex): Keep the "inline" keyword in C99 mode.
