* configure (topsrcdir): Don't use dirname.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35207 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-23  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
+
+	* configure (topsrcdir): Don't use dirname.
+
 2000-07-22  Jeffrey Oldham  <oldham@codesourcery.com>
 
 	* MAINTAINERS: Add self to Write After Approval list.
