--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jul 23 11:52:03 2000  George Helffrich (george@gly.bris.ac.uk)
+
+	* dbxout.c (dbxout_type, case COMPLEX_TYPE): Fix length field in stab.
+
 2000-07-23  Kazu Hirata  <kazu@hxi.com>
 
 	* h8300.c: Fix formatting.
