* gcc.dg/cpp/20000720-1.S: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35223 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/cpp/20000720-1.S: New test.
+
 2000-07-21  Michael Meissner  <meissner@redhat.com>
 
 	* gcc.c-torture/execute/ieee/hugeval.c: New test.
