--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 Mon Jul 24 02:04:52 2000  Jeffrey A Law  (law@cygnus.com)
 
+	* gcse.c (alloc_avail_expr_mem): Kill unused 'u_bitmap'.
+	(free_avail_expr_mem, alloc_pre_mem, free_pre_mem): Corresponding
+	changes.
+
 	* gcse.c (free_pre_mem): Do not free ANTLOC and AE_KILL here.
 	(compute_pre_data): Do it here instead.
 
