--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-24  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (bootstrap): Move -BstageN/ to the end.
+
 2000-07-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* tradcpp.c (main): Update max_include_len for cpp_include_defaults
