Generate REG_FRAME_RELATED_EXPR notes that are compatible with dwarf2out_frame_debug_expt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35233 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-24  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.c (emit_multi_reg_push): Generate a
+	REG_FRAME_RELEATED_NOTE that is compatable with the code in
+	dwarf2out_debug_frame_expr.
+
 2000-07-24  Jason Merrill  <jason@redhat.com>
 
 	* dwarf2out.c: Complain if DWARF2_DEBUGGING_INFO is defined without
