Delete references to FUNCTION_ARG_KEEP_AS_REFERENCE
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35237 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-24  Michael Meissner  <meissner@redhat.com>
+
+	* d30v.h (FUNCTION_ARG_KEEP_AS_REFERENCE): Delete references to
+	unsupported macro.
+
 2000-07-24  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.c (emit_multi_reg_push): Generate a
