* cppexp.c: Warn about unary + if -Wtraditional. 	* cpplex.c (lex_line): Always set BOL on the first token of a line.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35239 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-24  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cppexp.c: Warn about unary + if -Wtraditional.
+	* cpplex.c (lex_line): Always set BOL on the first token of a line.
+
 2000-07-24  Michael Meissner  <meissner@redhat.com>
 
 	* d30v.h (FUNCTION_ARG_KEEP_AS_REFERENCE): Delete references to
