--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -264,18 +264,18 @@
   "*
 {
   static const char * const alt[] = {
-    \"mov %0 = %r1\",
-    \"addl %0 = %1, r0\",
-    \"movl %0 = %1\",
-    \"ld8%O1 %0 = %1%P1\",
-    \"st8%Q0 %0 = %r1%P0\",
-    \"getf.sig %0 = %1\",
-    \"setf.sig %0 = %r1\",
-    \"mov %0 = %1\",
-    \"ldf8 %0 = %1%P1\",
-    \"stf8 %0 = %1%P0\",
-    \"mov %0 = %1\",
-    \"mov %0 = %r1\"
+    \"%,mov %0 = %r1\",
+    \"%,addl %0 = %1, r0\",
+    \"%,movl %0 = %1\",
+    \"%,ld8%O1 %0 = %1%P1\",
+    \"%,st8%Q0 %0 = %r1%P0\",
+    \"%,getf.sig %0 = %1\",
+    \"%,setf.sig %0 = %r1\",
+    \"%,mov %0 = %1\",
+    \"%,ldf8 %0 = %1%P1\",
+    \"%,stf8 %0 = %1%P0\",
+    \"%,mov %0 = %1\",
+    \"%,mov %0 = %r1\"
   };
 
   /* We use 'i' for alternative 2 despite possible PIC problems.
