2000-07-25  Toon Moene  <toon@moene.indiv.nluug.nl>
	Sorry - forgot changelog entry.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35243 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-25  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* g77.f-torture/compile/20000630-2.x: Removed.  Case fixed.
+
 2000-07-24  Geoff Keating  <geoffk@cygnus.com>
 
 	* gcc.c-torture/execute/20000722-1.x: New, testcase fails.
