2000-07-25  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* parse.c: Remove (again.)


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35244 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-25  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.c: Remove (again.)
+
 2000-07-21  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (simple_name:): Fixed typo in error message.
