* toplev.c (pipe_closed): Delete. 	(crash_signal): New.  Generate ICE for a fatal signal. 	(float_signal): Call crash_signal outside a float-handler 	block, not abort. 	(main): Install crash_signal as handler for core-dumping signals.
	* cp/decl.c: Remove all signal handling code, now done in toplev.c.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35247 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-07-25  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* toplev.c (pipe_closed): Delete.
+	(crash_signal): New.  Generate ICE for a fatal signal.
+	(float_signal): Call crash_signal outside a float-handler
+	block, not abort.
+	(main): Install crash_signal as handler for core-dumping signals.
+
 2000-07-25  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.c (print_operand, case 'T'): New case.
