--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -5000,8 +5000,8 @@
   "operands[1] = gen_lowpart (HImode, operands[0]);")
 
 (define_split
-  [(set (match_operand:SI 0 "q_regs_operand" "")
-	(and:SI (match_dup 0)
+  [(set (match_operand 0 "q_regs_operand" "")
+	(and (match_dup 0)
 		(const_int -256)))
    (clobber (reg:CC 17))]
   "(optimize_size || !TARGET_PARTIAL_REG_STALL)
@@ -5010,7 +5010,7 @@
   "operands[1] = gen_lowpart (QImode, operands[0]);")
 
 (define_split
-  [(set (match_operand 0 "register_operand" "")
+  [(set (match_operand 0 "q_regs_operand" "")
 	(and (match_dup 0)
 	     (const_int -65281)))
    (clobber (reg:CC 17))]
