--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-25  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.other/for2.C: New test.
+
 2000-07-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20000720-1.c: New test.
