--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-25  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.dg/cpp/tr-warn3.c: New test.
+
 2000-07-25  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.ext/implicit1.C: Remove.
