* cpplib.c (_cpp_check_directive): Issue -Wtraditional 	warnings for indented directives even if we are skipping.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35256 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-25  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpplib.c (_cpp_check_directive): Issue -Wtraditional
+	warnings for indented directives even if we are skipping.
+
 2000-07-25  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* invoke.texi (strict-prototypes): Remove.
