* sh.md (cmpgtdi_t): Must be split. 	(cmpgtdi_t+1): New splitter.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35257 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 25 23:08:33 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* sh.md (cmpgtdi_t): Must be split.
+	(cmpgtdi_t+1): New splitter.
+
 2000-07-25  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplib.c (_cpp_check_directive): Issue -Wtraditional
