* config/alpha/osf.h (SIZE_TYPE, PTRDIFF_TYPE): New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35258 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-25  Rodney Brown  <RodneyBrown@pmsc.com>
+
+	* config/alpha/osf.h (SIZE_TYPE, PTRDIFF_TYPE): New.
+
 Tue Jul 25 23:08:33 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* sh.md (cmpgtdi_t): Must be split.
