* parse.y (empty_parms): Use `()', not `(...)', when in the scope 	of `extern "C++"'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35265 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-26  Mark Mitchell  <mark@codesourcery.com>
+
+	* parse.y (empty_parms): Use `()', not `(...)', when in the scope
+	of `extern "C++"'.
+
 2000-07-25  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Kill strict_prototype. Backwards compatibility only for
