--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul 26 15:05:51 CEST 2000	Marc Espie <espie@cvs.openbsd.org>
+
+	* parse.y:  Add missing ';'.
+
 2000-07-26  Mark Mitchell  <mark@codesourcery.com>
 
 	* parse.y (empty_parms): Use `()', not `(...)', when in the scope
