Accept SEQUENCE as well as PARALLEL blocks in FRAME_RELATED_EXPR notes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35268 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-26  Nick Clifton  <nickc@cygnus.com>
+
+	* dwarf2out.c (dwarf2out_frame_debug_expr): Accept SEQUENCE as
+	well as PARALLEL blocks in FRAME_RELATED_EXPR notes.
+
 2000-07-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* c-decl.c (finish_enum): Convert enumerations that fit in an
