Remove definition of __arm__ from CPP_PREDEFINES
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35270 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-26  Nick Clifton  <nickc@cygnus.com>
 
+	* config/arm/vxarm.h (CPP_PREDEFINES): Remove definition of
+	__arm__.  Allow it to be defined by CPP_ISA_SPEC in arm.h
+
 	* dwarf2out.c (dwarf2out_frame_debug_expr): Accept SEQUENCE as
 	well as PARALLEL blocks in FRAME_RELATED_EXPR notes.
 
